force-app/main/default/objects/Customer__c.object
<CustomObject>
    <label>Customer</label>
    <pluralLabel>Customers</pluralLabel>

    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>


    <!-- PII / customer data -->
    <sharingModel>Private</sharingModel>

    <!-- Unique customer reference (legacy key / external id) -->
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <type>Text</type>
        <length>50</length>
        <unique>true</unique>
        <externalId>true</externalId>
    </fields>

    <!-- Basic identity -->
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <type>Text</type>
        <length>80</length>
    </fields>

    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <type>Text</type>
        <length>80</length>
    </fields>

    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>

    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefer not to say</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
    </fields>

    <!-- Contact -->
    <fields>
        <fullName>Primary_Email__c</fullName>
        <label>Primary Email</label>
        <type>Email</type>
    </fields>

    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>

    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>

    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>

    <!-- Address (simple legacy fields) -->
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <type>Text</type>
        <length>255</length>
    </fields>

    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <type>Text</type>
        <length>255</length>
    </fields>

    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Text</type>
        <length>80</length>
    </fields>

    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Text</type>
        <length>80</length>
    </fields>

    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <type>Text</type>
        <length>20</length>
    </fields>

    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Text</type>
        <length>80</length>
    </fields>

    <!-- Customer attributes often shown on a "Customer 360" style view -->
    <fields>
        <fullName>Member_Since__c</fullName>
        <label>Member Since</label>
        <type>Date</type>
    </fields>

    <fields>
        <fullName>Credit_Score__c</fullName>
        <label>Credit Score</label>
        <type>Number</type>
        <precision>5</precision>
        <scale>0</scale>
    </fields>

    <fields>
        <fullName>AUM__c</fullName>
        <label>AUM</label>
        <type>Currency</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>

    <fields>
        <fullName>Is_Spanish__c</fullName>
        <label>Is Spanish</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    </fields>

    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>High School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Postgraduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
    </fields>

    <fields>
        <fullName>Persona__c</fullName>
        <label>Persona</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>Digital Explorer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Value Seeker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
    </fields>

    <fields>
        <fullName>Number_Of_Dependents__c</fullName>
        <label>Number of Dependents</label>
        <type>Number</type>
        <precision>3</precision>
        <scale>0</scale>
    </fields>

    <!-- Status -->
    <fields>
        <fullName>Is_Active__c</fullName>
        <label>Is Active</label>
        <type>Checkbox</type>
        <defaultValue>true</defaultValue>
    </fields>

    <!-- Notes -->
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>

</CustomObject>